--- a/Task1/docker-compose.yml
+++ b/Task1/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     ports:
       - "8083:80"  # Expose port 8083 on the host to match nginx.conf
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - wordpress
 
