--- a/Task1/docker-compose.yml
+++ b/Task1/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   wordpress:
     image: wordpress:php8.2-fpm
     volumes:
-      - wordpress_data:/var/www/html
+      - public_html:/var/www/html
     restart: always
     environment:
       WORDPRESS_DB_HOST: db:3306
@@ -39,9 +39,10 @@ services:
       - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - public_html:/var/www/html
     depends_on:
       - wordpress
 
 volumes:
   db_data:
-  wordpress_data:
+  public_html:
