--- a/Task1/default.conf
+++ b/Task1/default.conf
@@ -10,10 +10,9 @@ server {
     }
 
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass php-fpm:9000;
+	    include fastcgi_params;
+        fastcgi_pass wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
     }
 
     location ~ /\.ht {
