--- a/Task2/conf/default.conf
+++ b/Task2/conf/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name firtswebsite.com;
+    server_name firstwebsite.com;
+    root /home/wptask/public_html;
 
-    root /var/www/html;
     index index.php index.html index.htm;
 
     location / {
@@ -10,9 +10,12 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
     }
 
     location ~ /\.ht {
