--- a/Task1/docker-compose.yml
+++ b/Task1/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./default.conf:/etc/nginx/conf.d/default.conf
       - public_html:/var/www/html
     depends_on:
       - wordpress
